fix lỗi khi cuộn chuột xuống thì ảnh che mất header bằng z-index (trục z làm cho header nổi lên ảnh)

--- a/w3_band/assets/css/style.css
+++ b/w3_band/assets/css/style.css
@@ -31,6 +31,7 @@ html {
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1;
 }
 
 #nav {
